# hb-data

./: .gitignore  CLAUDE.md  GEMINI.md  README.md  pyproject.toml  ruff.toml
.github/workflows/: generate-textmaps.yml
hb_data/: __init__.py
hb_data/common/: base_client.py  base_deob.py  dict_utils.py
hb_data/gi/: __init__.py  client.py
hb_data/gi/models/: __init__.py  mw_costume.py
hb_data/zzz/: __init__.py  client.py  deob.py
hb_data/zzz/models/: __init__.py  bangboo.py  character.py  disc.py  enums.py  weapon.py
scripts/: generate_textmaps.py
textmaps/gi/: TextMapCHS.json  TextMapCHT.json  TextMapDE.json  TextMapEN.json  TextMapES.json  TextMapFR.json  TextMapID.json  TextMapIT.json  TextMapJP.json  TextMapKR.json  TextMapPT.json  TextMapRU.json  TextMapTH.json  TextMapTR.json  TextMapVI.json
textmaps/zzz/: TextMapTemplateTb.json  TextMap_CHTTemplateTb.json  TextMap_DETemplateTb.json  TextMap_ENTemplateTb.json  TextMap_ESTemplateTb.json  TextMap_FRTemplateTb.json  TextMap_IDTemplateTb.json  TextMap_JATemplateTb.json  TextMap_KOTemplateTb.json  TextMap_PTTemplateTb.json  TextMap_RUTemplateTb.json  TextMap_THTemplateTb.json  TextMap_VITemplateTb.json
