[project]
name = "hb-data"
version = "0.1.0"
description = "Package for getting data that Hoyo Buddy needs."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.3",
    "loguru>=0.7.3",
    "orjson>=3.11.7",
    "pydantic>=2.12.5",
]
license = { file = "LICENSE" }
