[project]
name = "hb_data"
version = "0.1.0"
description = "Package for getting data that Hoyo Buddy needs."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.3",
    "loguru>=0.7.3",
    "orjson>=3.11.7",
    "pydantic>=2.12.5",
]
license = { file = "LICENSE" }

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[tool.pyright]
enableTypeIgnoreComments = false
reportIncompatibleMethodOverride = false
reportIncompatibleVariableOverride = false
reportUnnecessaryComparison = true
reportUnnecessaryContains = true
reportUnnecessaryIsInstance = true
reportUnnecessaryTypeIgnoreComment = true
typeCheckingMode = "standard"
venv = ".venv"
venvPath = "."
